--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+evdev = {version = "0.12.1", features = ["tokio"]}
 ndarray = "0.15.6"
+tokio = "1.28.1"
